--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Wenn du viele Menschen kennst, kann sich das auf dein Leben ziemlich unerwartet auswirken. Deshalb haben wir einen Absturz behoben, der einige Nutzer*innen mit Tausenden von Kontakten im Adressbuch betraf.
