--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Διορθώσαμε ένα σφάλμα που επηρέαζε ορισμένους χρήστες που είχαν αρκετές χιλιάδες επαφές στη λίστα επαφών τους.
