--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Conocer a un montón de personas puede impactar tu vida de formas inesperadas. ¡Pero no en Signal! Hemos solucionado un error que afectaba a algunos usuarios que tenían varios miles de contactos guardados.
