--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Korjasimme kaatumisen, joka vaikutti joihinkin käyttäjiin, joiden osoitekirjassa oli useita tuhansia yhteystietoja.
