--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Kami memperbaiki masalah yang berdampak pada beberapa pengguna yang memiliki beberapa ribu kontak di daftar kontak mereka.
