--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• 주소록의 주소가 수천 개에 이르는 일부 사용자에게서 발생하던 충돌 문제를 해결했습니다.
