--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Kami telah membetulkan ranap sistem yang menjejaskan sesetengah pengguna yang mempunyai beberapa ribu kenalan dalam buku alamat mereka.
