--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Als je veel mensen kent, kan dat een onverwachte impact op je leven hebben. Daarom hebben we een fout opgelost die gevolgen had voor sommige gebruikers met duizenden contacten in hun adresboek.
