--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Когда у вас масса знакомых, это может повлиять на вашу жизнь неожиданным образом. Поэтому мы исправили сбой, который отражался на некоторых пользователях, у которых в адресной книге было несколько тысяч контактов.
