--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• เราแก้ไขปัญหาแอปหยุดทำงานซึ่งอาจเคยเกิดกับผู้ใช้บางคนที่ในสมุดรายชื่อมีผู้ติดต่อเป็นจำนวนมาก
