--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• Chúng tôi đã sửa lỗi ứng dụng đóng đột ngột ảnh hưởng đến một số người dùng có đến hàng nghìn liên hệ trong danh bạ.
