--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,1 +1,1 @@
-• When you know a ton of people, it can impact your life in unexpected ways. So we fixed a crash that was affecting some users who had several thousand contacts in their address book.
+• 當你認識太多人時，可能會影響你的正常生活。所以我們修正了一個當機問題，這問題會影響一些通訊錄中有數千個聯絡人的用戶。
